{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 17,
  "lineage": "6136ee0e-c4b2-d252-caa0-b2217f969a62",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "private_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/loadBalancers/Private-LB/frontendIPConfigurations/private-lb-fe",
                "name": "private-lb-fe",
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/virtualNetworks/VNET-01/subnets/App-VM"
              }
            ],
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/loadBalancers/Private-LB",
            "location": "southindia",
            "name": "Private-LB",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "SK-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.app",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/loadBalancers/Public-LB/frontendIPConfigurations/public-lb-fe",
                "name": "public-lb-fe",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/publicIPAddresses/public_lb"
              }
            ],
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/loadBalancers/Public-LB",
            "location": "southindia",
            "name": "Public-LB",
            "resource_group_name": "SK-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.lb-public",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkInterfaces/App-Nic",
            "internal_domain_name_suffix": "1gekjihnbnyuzmiwhfravbi04g.tx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app-ip-config",
                "primary": true,
                "private_ip_address": "10.1.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/virtualNetworks/VNET-01/subnets/App-VM"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southindia",
            "name": "App-Nic",
            "private_ip_address": "10.1.2.5",
            "private_ip_addresses": [
              "10.1.2.5"
            ],
            "resource_group_name": "SK-RG"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.app",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkInterfaces/Web-Nic",
            "internal_domain_name_suffix": "1gekjihnbnyuzmiwhfravbi04g.tx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-ip-config",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/publicIPAddresses/Public-IP",
                "subnet_id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/virtualNetworks/VNET-01/subnets/Web-VM"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southindia",
            "name": "Web-Nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "SK-RG"
          },
          "dependencies": [
            "azurerm_public_ip.web_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "app_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkInterfaces/App-Nic|/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkSecurityGroups/App-Nsg",
            "network_interface_id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkInterfaces/App-Nic",
            "network_security_group_id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkSecurityGroups/App-Nsg"
          },
          "dependencies": [
            "azurerm_network_interface.app_nic",
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkInterfaces/Web-Nic|/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkSecurityGroups/Web-Nsg",
            "network_interface_id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkInterfaces/Web-Nic",
            "network_security_group_id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkSecurityGroups/Web-Nsg"
          },
          "dependencies": [
            "azurerm_network_interface.web_nic",
            "azurerm_network_security_group.web_nsg",
            "azurerm_public_ip.web_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkSecurityGroups/App-Nsg",
            "location": "southindia",
            "name": "App-Nsg",
            "resource_group_name": "SK-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_PVT",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.1.1.4",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/networkSecurityGroups/Web-Nsg",
            "location": "southindia",
            "name": "Web-Nsg",
            "resource_group_name": "SK-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/publicIPAddresses/public_lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.13.21.182",
            "ip_version": "IPv4",
            "location": "southindia",
            "name": "public_lb",
            "resource_group_name": "SK-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/publicIPAddresses/Public-IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.13.23.146",
            "ip_version": "IPv4",
            "location": "southindia",
            "name": "Public-IP",
            "resource_group_name": "SK-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/virtualNetworks/VNET-01/subnets/App-VM",
            "name": "App-VM",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SK-RG",
            "virtual_network_name": "VNET-01"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/virtualNetworks/VNET-01/subnets/Web-VM",
            "name": "Web-VM",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SK-RG",
            "virtual_network_name": "VNET-01"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a0a488d9-0bed-4c71-b116-39620a851af6",
            "id": "/subscriptions/2d146f79-fad3-42f1-8469-8e4c980c095e/resourceGroups/SK-RG/providers/Microsoft.Network/virtualNetworks/VNET-01",
            "location": "southindia",
            "name": "VNET-01",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "SK-RG"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}